--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ VKBot/.idea/VKBot.iml
 *.xml
 *.pyc
 *.log
+*.pyc
+VKBot/Database/Models/__pycache__/CommandModel.cpython-37.pyc
+VKBot/Database/Models/__pycache__/BaseModel.cpython-37.pyc
